--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,11 +1,13 @@
 ---
 
-varnish_enabled: false
+varnish_enabled: true
 
 varnish_start_at_boot: "yes"
 varnish_max_files_open: 131072
 varnish_max_locked_memory: 82000
 
-varnish_listen_port: false
+varnish_listen_port: 80
+varnish_admin_host: 0.0.0.0
+varnish_admin_port: 6082
 varnish_forward_port: 8080
 varnish_forward_host: 127.0.0.1
