--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -19,6 +19,7 @@
   with_items:
     - { src: default.vcl.j2, dest: /etc/varnish/default.vcl }
     - { src: varnish.j2, dest: /etc/default/varnish }
+    - { src: customexec.conf.j2, dest: /etc/systemd/system/varnish.service.d/customexec.conf }
   when: varnish_enabled
   notify: restart varnish
   tags:
